--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,12 @@ li a {
 li:hover{
     background-color: green;
   }
+  @media only screen and (max-width: 600px) {
+    .text-align-center{
+        text-align: center;
+    margin-top:180px;
+    margin-right:100px;
+    margin-left:100px;
+    color:black;
+    }
+  }
