--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,12 @@ li:hover{
     color:black;
     }
   }
+  @media only screen and (max-width: 300px) {
+    .text-align-center{
+        text-align: center;
+    margin-top:180px;
+    margin-right:20px;
+    margin-left:20px;
+    color:black;
+    }
+  }
