--- a/Todo/style.css
+++ b/Todo/style.css
@@ -32,3 +32,23 @@ ul li{
 .center{
     text-align: center;
 }
+@media only screen and (max-width: 600px){
+    #addthingtodo{
+        padding-left:2rem;
+        padding-right:2rem;
+        padding-top:0.5rem;
+        padding-bottom:0.5rem;
+        margin-top:1em;
+        text-align:center;
+    }
+}
+@media only screen and (max-width: 250px){
+    #addthingtodo{
+        padding-left:1rem;
+        padding-right:1rem;
+        padding-top:0.5rem;
+        padding-bottom:0.5rem;
+        margin-top:1em;
+        text-align:center;
+    }
+}
