--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,37 @@
 body{
-    background-image: url(https://images.pexels.com/photos/9754/mountains-clouds-forest-fog.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-    width: 100%;
-     /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    font-family:Poppins, sans-serif;
+    background-color:#5352d4;
 }
-.text-align-center{
-    text-align: center;
-    margin-top:200px;
-    margin-right:220px;
-    margin-left:220px;
-    color:black;
+.profile{
+    display:flex;
+    justify-content: center;
+    color:white;
 }
-h1{
-    font-size:40px;
-    font-family: 'Fira Sans', sans-serif;
+.profile-left{
+    position:static;
+    padding-top:3rem;
+    padding-left:3rem;
+    padding-right:3rem;
+    background-color:#5655da;
+    height:100vh;
 }
-#facebook-profile{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:320px;
-    height:320px;
+.profile-right{
+    padding-top:3rem;
+    color:#1a1a1a;
+    padding-left:6rem;
+    padding-right:6rem;
+    background-color:#ffffff;
 }
-ul{
-    list-style-type: none;
-    margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+.head{
+    color:#f74470;
 }
-li {
-    float: left;
-  }
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-#login{
-      float:right;
-  }
-.tabbar{
-    font-family: 'Fira Sans', sans-serif;
-  }
-#name{
-    color:whitesmoke;
-    text-transform: uppercase;
-    font-size:18px;
-  }
-li:hover{
-    background-color: green;
-  }
-  @media only screen and (max-width: 600px) {
-    .text-align-center{
-        text-align: center;
-    margin-top:180px;
-    margin-right:100px;
-    margin-left:100px;
-    color:black;
-    }
-  }
-  @media only screen and (max-width: 500px) {
-    .text-align-center{
-        text-align: center;
-    margin-top:180px;
-    margin-right:20px;
-    margin-left:20px;
-    color:black;
-    }
-  }
+a{
+    text-decoration:none;
+    color:white;
+}
+a :active{
+    color:#f74470;
+}
+.contact{
+    padding-bottom:5rem;
+}
